# seer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-reproducible-experiment-runtime/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-multi-domain-evidence-data/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-RESEARCH.md  02-VALIDATION.md
.planning/research/: SUMMARY.md
.serena/: project.yml
.trunk/: trunk.yaml
artifacts/phase02-prepared-v2/: COMPLETE
artifacts/phase02-prepared-v2/examples/: babi-calibration.jsonl  (+6 more)
docs/: ARCHITECTURE.md  OPERATIONS.md  ROADMAP.md  TRAINING.md
examples/: evidence.json  synthetic.json
notebooks/: phase2_a100_generation.ipynb
scripts/: colab_phase2_generation.py
src/seer/: __init__.py  adapters.py  cache.py  cli.py  config.py  corruptions.py  data.py  energy.py  eval.py  evidence.py  generation.py  model.py  normalization.py  optim.py  partitions.py  preparation.py  runtime.py  smoke.py  sufficiency.py  train.py
tests/: fakes.py  test_adapters.py  test_cache.py  test_cli.py  test_colab_handoff.py  test_config.py  test_data.py  test_energy.py  test_eval.py  test_evidence.py  test_generation.py  test_model.py  test_normalization.py  test_optim.py  test_partitions.py  test_runtime.py  test_smoke.py  test_train.py
(+17 files in other folders)
